# ch341prog

./: .gitignore  99-ch341a-prog.rules  CMakeLists.txt  CONTRIBUTORS  Makefile  README.md  ch341a.c  ch341a.conf.freebsd  ch341a.h  flake.nix  main.c
debian/: ch341prog.dirs  ch341prog.substvars  changelog  control  rules
